# GBA-image-tools

./: .gitignore  .gitmodules  CMakeLists.txt  GBA.gpl  LICENSE  README.md  colorhelpers.cpp  colorhelpers.h  colormap555.cpp  compresshelpers.h  compressvideo.cpp  datahelpers.cpp  datahelpers.h  exception.h  filehelpers.cpp  filehelpers.h  gimppalette555.cpp  helpers.cpp  helpers.h  hex2gba.cpp  imagehelpers.cpp  imagehelpers.h  imageio.cpp  imageio.h  imageprocessing.cpp  imageprocessing.h  imagestructs.cpp  imagestructs.h  img2h.cpp  img2h.md  lzsshelpers.cpp  lzsshelpers.h  movecolor.cpp  processingoptions.cpp  processingoptions.h  processingtypes.h  spritehelpers.cpp  spritehelpers.h  vid2h.cpp  vid2h.md  (+2 more)
gba/: CMakeLists.txt  base.h  codec_dxtg.cpp  codec_dxtg.h  codec_dxtv.cpp  codec_dxtv.h  decompression.cpp  decompression.h  dma.h  image.cpp  memcpy.s  memory.cpp  memory.h  memset.s  tiles.h  time.cpp  time.h  tui.cpp  tui.h  video.cpp  videodecoder.cpp  videodecoder.h  videoplayer.cpp  videoplayer.h  videoreader.cpp  videoreader.h  videostructs.h
gba/audio/: adpcm.cpp  adpcm.h  adpcm_asm.h  adpcm_asm.s
gba/cmake/: CompilerFlagsGBA.cmake
gba/compression/: lz4.cpp  lz4.h  lz4_asm.s  lz77.h  lz77.s  lz77_asm.s
gba/data/: data.h  data.s  font_8x8.c  font_8x8.h  font_sans.c  font_sans.h  font_sans_chars.h  font_subtitles.c  font_subtitles.h  font_subtitles_chars.h  images_dxt.c  images_dxt.h  video.s  videohelp.c  videohelp.h  videohelp.xcf
gba/image/: dxt.cpp  dxt.h  dxt_tables.cpp  dxt_tables.h
gba/memory/: dma.cpp  dma.h  memcpy.s  memory.h
gba/print/: itoa.cpp  itoa.h  output.cpp  output.h
gba/sys/: base.h  decompress.cpp  decompress.h  decompression.cpp  decompression.h  syscall.h
gba/video/: codec_dxtg.cpp  codec_dxtg.h  codec_dxtv.cpp  codec_dxtv.h  dxtv.cpp  dxtv.h  dxtv.s  dxtv_asm.h  dxtv_asm.s  dxtv_constants.h  lz77.h  subtitles.cpp  subtitles.h  vid2hdecoder.cpp  vid2hdecoder.h  vid2hio.cpp  vid2hio.h  videodecoder.cpp  videodecoder.h  videohelp.cpp  videohelp.h  videoplayer.cpp  videoplayer.h  videoreader.cpp  videoreader.h  videostructs.h
src/: CMakeLists.txt  codec_dxt.cpp  codec_dxt.h  codec_dxtv.cpp  codec_dxtv.h  codec_gvid.cpp  codec_lzss.cpp  codec_lzss.h  codec_rle.cpp  codec_rle.h  color.cpp  color.h  color_rgb.cpp  color_ycgco.cpp  color_ycgco.h  colorblock.h  colorhelpers.cpp  colorhelpers.h  colormap555.cpp  compresshelpers.cpp  compresshelpers.h  correlation.h  datahelpers.cpp  datahelpers.h  dct.h  dtc.h  dxtblock.h  exception.h  filehelpers.cpp  filehelpers.h  gencolormaps.cpp  gimppalette555.cpp  hex2gba.cpp  imagehelpers.cpp  imagehelpers.h  imageio.cpp  imageio.h  imageprocessing.cpp  imageprocessing.h  imagestructs.cpp  (+17 more)
src/audio/: audioformat.cpp  audioformat.h  audiohelpers.cpp  audiohelpers.h  audioprocessing.cpp  audioprocessing.h  audiostructs.h  processingtype.h  resampler.cpp  resampler.h  samplebuffer.cpp  samplebuffer.h  sampleformat.cpp  sampleformat.h  wavwriter.h
src/audio_codec/: adpcm.cpp  adpcm.h
src/codec/: blockview.h  codebook.h  dxt.cpp  dxt.h  dxt_tables.h  dxtblock.h  dxttables.cpp  dxttables.h  dxtv.cpp  dxtv.h  dxtv_constants.h  gvid.cpp  gvid.h
src/color/: cielabf.cpp  cielabf.h  colorformat.cpp  colorformat.h  colorhelpers.cpp  colorhelpers.h  conversions.cpp  conversions.h  distance.cpp  distance.h  gamma.cpp  gamma.h  grayf.cpp  grayf.h  lchf.cpp  lchf.h  optimizedistance.cpp  optimizedistance.h  psnr.h  rgb565.cpp  rgb565.h  rgb888.cpp  rgb888.h  rgbd.cpp  rgbd.h  rgbf.cpp  rgbf.h  xrgb1555.cpp  xrgb1555.h  xrgb555.cpp  xrgb555.h  xrgb888.cpp  xrgb888.h  xrgb8888.cpp  xrgb8888.h  ycgcod.cpp  ycgcod.h  ycgcof.cpp  ycgcof.h  ycgcorf.cpp  (+1 more)
src/compression/: dxtblock.h  lz4.cpp  lz4.h  lzss.cpp  lzss.h  rans.cpp  rans.h
src/if/: adpcm_constants.h  adpcm_structs.cpp  adpcm_structs.h  adpcm_tables.cpp  adpcm_tables.h  adpcmstructs.h  audio_processingtype.h  dxtv_constants.h  dxtv_structs.cpp  dxtv_structs.h  dxtvstructs.h  image_processingtype.h  lz4_constants.h  mediatypes.h  vid2h_structs.h  vid2hstructs.h
src/image/: datasize.h  datatype.cpp  imagedata.h  imagedatahelpers.h  imagehelpers.cpp  imagehelpers.h  imageio.cpp  imageio.h  imageprocessing.cpp  imageprocessing.h  imagestructs.cpp  imagestructs.h  pixeldata.h  processingtype.h  quantization.cpp  quantization.h  quantizationmethod.h  spritehelpers.cpp  spritehelpers.h
src/image_codec/: codebook.h  dxt.cpp  dxt.h  dxt_tables.cpp  dxtv.cpp  dxtv.h  dxtv_constants.h  gvid.h
src/io/: audioio.cpp  audioio.h  binio.cpp  binio.h  binreader.cpp  binreader.h  ffmpegreader.cpp  ffmpegreader.h  imageio.cpp  imageio.h  mediareader.cpp  mediareader.h  mediatypes.h  statisticswriter.cpp  statisticswriter.h  streamio.cpp  streamio.h  textio.cpp  textio.h  vid2hio.cpp  vid2hio.h  vid2hreader.cpp  vid2hreader.h  vid2hstructs.h  videoreader.cpp  videoreader.h  wavwriter.cpp  wavwriter.h
src/math/: boundingbox.h  clusterfit.h  colorfit.h  histogram.h  kmeans.h  linefit.h
src/media/: mediawindow.cpp  mediawindow.h
src/processing/: datahelpers.cpp  datahelpers.h  datatype.h  imagedata.h  imagehelpers.cpp  imagehelpers.h  imageprocessing.cpp  imageprocessing.h  imagestructs.cpp  imagestructs.h  pixeldata.h  processinghelpers.h  processingoptions.cpp  processingoptions.h  processingtypes.h  quantization.cpp  quantization.h  quantizationmethod.cpp  spritehelpers.cpp  spritehelpers.h  varianthelpers.h
src/statistics/: csvio.h  statistics.cpp  statistics.h  statistics_window.cpp  statistics_window.h  statisticswindow.cpp  (+2 more)
test/: CMakeLists.txt  test_blockview.cpp  test_codebook.cpp  test_colorfit.cpp  test_colorformat.cpp  test_colorhelpers.cpp  test_conversions.cpp  test_datahelpers.cpp  test_dxt.cpp  test_dxtg.cpp  test_dxtv.cpp  test_grayf.cpp  test_imagedata.cpp  test_imagehelpers.cpp  test_imageio.cpp  test_lz4.cpp  test_lzss.cpp  test_processinghelpers.cpp  test_quantization.cpp  test_rans.cpp  test_rgb565.cpp  test_rgb888.cpp  test_rgbf.cpp  test_spritehelpers.cpp  test_xrgb1555.cpp  test_xrgb8888.cpp  test_ycgcorf.cpp  testmacros.h
(+23 files in other folders)
